Fix layout issue

--- a/src/app/components/feedback/feedback.component.scss
+++ b/src/app/components/feedback/feedback.component.scss
@@ -98,9 +98,10 @@ h3 {
 @media screen and (max-width: 600px) {
   .feed {
     display: block;
-  }
-  .feed > div {
-    display: block;
+
+    > div:not(.comment-input-group) {
+      display: block;
+    }
   }
 }
 
